# minecraft_alpha_server

./: Cargo.toml  README.md
src/: blocks_items.rs  byte_ops.rs  chunk.rs  entity_id.rs  main.rs  mcstring.rs  player.rs  position.rs  state.rs  to_bytes.rs  utils.rs
src/packets/: mod.rs  packet101.rs  packet15_place.rs  packet1_login.rs
