[package]
name = "minecraft_server_impl"
version = "0.1.0"
edition = "2021"

[dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
byteorder = "1.5.0"
colog = "1.3.0"
flate2 = "1.0.34"
log = "0.4.22"
md2 = "0.10.2"
md5 = "0.7.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
